<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#14111D"
        android:weightSum="5">


        <RelativeLayout
            android:id="@+id/mainBottomTabOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/bottom_tab_iv_one"
                style="@style/style_bottom_menu_image"
                android:background="@drawable/selector_menu_wallet" />

            <TextView
                style="@style/style_bottom_menu_text"
                android:layout_below="@+id/bottom_tab_iv_one"
                android:text="@string/qiabao" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/mainBottomTabTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/bottom_tab_iv_two"
                style="@style/style_bottom_menu_image"
                android:background="@drawable/selector_menu_shop" />

            <TextView
                style="@style/style_bottom_menu_text"
                android:layout_below="@+id/bottom_tab_iv_two"
                android:text="@string/hangqing" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/mainBottomTabThere"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">


            <ImageView
                android:id="@+id/bottom_tab_iv_there"
                style="@style/style_bottom_menu_image"
                android:background="@drawable/selector_menu_manglmoeny" />

            <TextView
                style="@style/style_bottom_menu_text"
                android:layout_below="@+id/bottom_tab_iv_there"
                android:text="@string/lica" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/mainBottomTabFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">


            <ImageView
                android:id="@+id/bottom_tab_iv_four"
                style="@style/style_bottom_menu_image"
                android:background="@drawable/selector_menu_find" />

            <TextView
                style="@style/style_bottom_menu_text"
                android:layout_below="@+id/bottom_tab_iv_four"
                android:text="@string/findfind" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mainBottomTabFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">


            <ImageView
                android:id="@+id/bottom_tab_iv_five"
                style="@style/style_bottom_menu_image"
                android:background="@drawable/selector_menu_my" />

            <TextView
                style="@style/style_bottom_menu_text"
                android:layout_below="@+id/bottom_tab_iv_five"
                android:text="@string/wode" />

        </RelativeLayout>

    </LinearLayout>
</layout>