<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="registerViewModel"
            type="com.xiamuyao.ulanbator.viewmodel.RegisterViewModel" />
    </data>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".activity.Register">

            <include
                android:id="@+id/titleBar"
                layout="@layout/layout_titlebar" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.10" />


            <TextView
                android:id="@+id/textView20"
                style="@style/registerTitle"
                android:text="@string/selelcyCity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline35" />

            <TextView
                android:id="@+id/textView21"
                style="@style/registerSubTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView20"
                tools:text="TextView" />

            <ImageView
                android:id="@+id/selectCity"
                android:layout_width="@dimen/dimens_20dp"
                android:layout_height="@dimen/dimens_20dp"
                android:layout_marginEnd="24dp"
                android:background="#f12331"
                app:layout_constraintBottom_toBottomOf="@+id/textView21"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView21"
                app:layout_constraintVertical_bias="0.0"
                tools:srcCompat="@tools:sample/avatars" />

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="@color/line"
                app:layout_constraintTop_toBottomOf="@id/textView21"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="15dp"
                android:text="@string/phoneNumber"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view3" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView22"
                tools:text="+86" />

            <EditText
                android:id="@+id/editText23"
                android:layout_width="287dp"
                android:layout_height="44dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toEndOf="@+id/textView23"
                app:layout_constraintTop_toBottomOf="@+id/textView22" />


            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="@color/line"
                app:layout_constraintTop_toBottomOf="@id/editText23"
                tools:layout_editor_absoluteX="0dp" />


            <TextView
                android:id="@+id/textView25"
                style="@style/registerTitle"
                android:text="@string/phoneNumberCode"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view4" />

            <EditText
                android:id="@+id/textView26"
                style="@style/registerSubTitle"
                android:text="TextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView25" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:text="@string/phonecode"
                app:layout_constraintBottom_toBottomOf="@+id/textView26"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView26"
                app:layout_constraintVertical_bias="0.0" />

            <View
                android:id="@+id/view5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="@color/line"
                app:layout_constraintTop_toBottomOf="@id/textView27"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/textView28"
                style="@style/registerTitle"
                android:text="@string/loginPsd"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view5" />

            <EditText
                android:id="@+id/textView29"
                style="@style/registerSubTitle"
                android:text="TextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView28" />

            <View
                android:id="@+id/view7"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="@color/line"
                app:layout_constraintTop_toBottomOf="@id/textView29"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/textView30"
                style="@style/registerTitle"
                android:text="@string/aginPsd"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view7" />

            <EditText
                android:id="@+id/textView31"
                style="@style/registerSubTitle"
                android:text="TextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView30" />

            <View
                android:id="@+id/view8"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="@color/line"
                app:layout_constraintTop_toBottomOf="@id/textView31"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/textView32"
                style="@style/registerTitle"
                android:text="@string/InvitationCode"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view8" />

            <EditText
                android:id="@+id/textView33"
                style="@style/registerSubTitle"
                android:text="TextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView32" />

            <View
                android:id="@+id/view9"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="@color/line"
                app:layout_constraintTop_toBottomOf="@id/textView33" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline38"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline39"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.86" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="@dimen/dimens_20dp"
                android:layout_height="@dimen/dimens_20dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="@dimen/dimens_20dp"
                android:background="#123"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view9"
                app:layout_constraintTop_toTopOf="@+id/guideline39" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/dimens_20dp"
                android:text="@string/privacyPolicy"
                app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                app:layout_constraintStart_toEndOf="@+id/imageView5"
                app:layout_constraintTop_toTopOf="@+id/guideline39" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/rehister"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline38"
                app:layout_constraintTop_toTopOf="@+id/guideline39" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>