<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="com.xiamuyao.ulanbator.viewmodel.LoginViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.Login">


        <include
            android:id="@+id/titleBar"
            layout="@layout/layout_titlebar" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

        <TextView
            android:id="@+id/textView20"
            android:text="@string/selelcyCity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline35"
            style="@style/loginTitle" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="10dp"
            tools:text="TextView"
            android:text="@{loginViewModel.selectCityName}"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

        <ImageView
            android:id="@+id/selectCity"
            android:layout_width="@dimen/dimens_20dp"
            android:layout_height="@dimen/dimens_20dp"
            android:layout_marginEnd="24dp"
            android:background="#f12331"
            app:layout_constraintBottom_toBottomOf="@+id/textView21"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView21"
            app:layout_constraintVertical_bias="0.0"
            tools:srcCompat="@tools:sample/avatars" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="@color/line"
            app:layout_constraintTop_toBottomOf="@id/textView21"
            tools:layout_editor_absoluteX="0dp" />


        <TextView
            android:id="@+id/textView22"
            android:text="@string/phoneNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3"
            style="@style/loginTitle" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            tools:text="+86"
            android:text="@{loginViewModel.selectCityNum}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView22" />

        <EditText
            android:id="@+id/editText23"
            android:layout_width="287dp"
            android:layout_height="44dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@+id/textView23"
            app:layout_constraintTop_toBottomOf="@+id/textView22" />


        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="@color/line"
            app:layout_constraintTop_toBottomOf="@id/editText23"
            tools:layout_editor_absoluteX="0dp" />


        <TextView
            android:id="@+id/textView24"
            android:text="@string/loginPsd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view4"
            style="@style/loginTitle" />


        <EditText
            android:id="@+id/editText24"
            android:layout_width="342dp"
            android:layout_height="44dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView24" />


        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="@color/line"
            app:layout_constraintTop_toBottomOf="@id/editText24"
            tools:layout_editor_absoluteX="0dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/fopsd"
            app:layout_constraintEnd_toStartOf="@+id/guideline37"
            app:layout_constraintHorizontal_bias="0.171"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline36" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline37"
            app:layout_constraintTop_toTopOf="@+id/guideline36" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>